css/overflow fixes

--- a/css/meny.css
+++ b/css/meny.css
@@ -10,10 +10,11 @@
   border: 1px solid #333;
   padding: 2%;
   padding-top: 0;
+  padding-bottom: 3em;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  gap: 2%;
-  min-height: 250vh;
+  gap: 1%;
+  min-height: 100vh;
 }
 
 .menu-container,
@@ -59,17 +60,10 @@ h3 {
   padding: 0 2%;
   flex-flow: column wrap;
 }
+
 .inner-box-heading {
   color: var(--color-third);
   font-size: 1.2em;
-}
-.menu-item-description {
-  display: flex;
-  text-align: start;
-  font-style: italic;
-  font-size: 90%;
-  margin-top: 4px;
-  margin-left: 0;
 }
 .menu-heading {
   font-size: 3em;
@@ -93,7 +87,6 @@ h3 {
   display: flex;
   justify-content: space-between;
   margin: 0;
-  margin-top: 5px;
 }
 .menu-item-price {
   text-align: end;
@@ -102,11 +95,19 @@ h3 {
   flex-wrap: wrap;
   text-align: start;
 }
+.menu-item-description {
+  display: flex;
+  text-align: start;
+  font-style: italic;
+  font-size: 90%;
+  margin-top: 4px;
+  margin-left: 0;
+}
 /*GRID DESKTOP*/
 
 .menu-heading {
   grid-column: 1/14;
-  grid-row: 1;
+  grid-row: 1/2;
   justify-self: center;
 }
 .drinks-part {
@@ -141,25 +142,28 @@ h3 {
     grid-template-rows: repeat(auto, 1fr);
     margin-top: 2%;
     padding-top: 0;
+
     row-gap: 1%;
     font-size: 80%;
-    min-height: 250vh;
+    min-height: 100vh;
   }
   .menu-heading {
     grid-column: 1/7;
-    grid-row: 1/1;
+    grid-row: 1/2;
     justify-self: center;
   }
   .drinks-part {
     grid-column: 4/7;
-    grid-row: 7/16;
+    grid-row: 6/9;
     gap: 0;
     display: flex;
     flex-flow: column wrap;
+    margin-bottom: 2em;
   }
   .drinks-part2 {
     grid-column: 1/4;
-    grid-row: 12/16;
+    grid-row: 8/9;
+    margin-bottom: 2em;
   }
   .starters-part {
     grid-column: 1/7;
@@ -167,15 +171,15 @@ h3 {
   }
   .mains-part {
     grid-column: 1/7;
-    grid-row: 3/7;
+    grid-row: 3/6;
   }
   .childrens-part {
     grid-column: 1/4;
-    grid-row: 7/9;
+    grid-row: 6/7;
   }
   .desserts-part {
     grid-column: 1/4;
-    grid-row: 9/12;
+    grid-row: 7/8;
   }
 }
 
@@ -184,8 +188,8 @@ h3 {
   .menu-container {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(auto, 1fr);
-    min-height: 320vh;
-    grid-gap: 1%;
+    min-height: 100vh;
+    grid-gap: 0.5%;
     font-size: 70%;
   }
   .menu-heading {
@@ -212,12 +216,10 @@ h3 {
   .drinks-part {
     grid-column: 1/2;
     grid-row: 20/25;
-    gap: 0;
-
-    width: 100%;
   }
   .drinks-part2 {
     grid-column: 1/2;
     grid-row: 25/30;
+    margin-bottom: 3em;
   }
 }
